--- a/app/views/layouts/_ie9.jade
+++ b/app/views/layouts/_ie9.jade
@@ -1,8 +1,10 @@
 //if lt IE 9
-    div(class='container alert alert-danger')
-        div(class='row-fluid')
-            div(class='span12')
+    div(class='ie9-tip alert alert-danger alert-dismissable fade in')
+        button(type='button',class='close',data-dismiss='alert',aria-hidden='true') &times
+        div(class='row')
+            div(class='col-sm-offset-1 col-md-10')
                 div
+
                     h4 注意!
                     br
                     p
