--- a/app/views/layouts/logo-layout.jade
+++ b/app/views/layouts/logo-layout.jade
@@ -11,7 +11,7 @@ html(lang='en')
 
             include _ico
             include _only-logo
-
+    include _ie9
     div.container.min-container
         block content
     include _footer
