--- a/app/views/layouts/main-layout.jade
+++ b/app/views/layouts/main-layout.jade
@@ -10,8 +10,9 @@ html(lang='en')
             include _js
 
             include _ico
-            
+           
     include _head
+    include _ie9
     div.container.min-container
         include _message
         block content
