--- a/app/views/layouts/review-layout.jade
+++ b/app/views/layouts/review-layout.jade
@@ -12,7 +12,7 @@ html(lang='en')
             include _ico
             include _logo
 
-
+    include _ie9
     div.container.min-height
         include _message
         block content
