--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -51,19 +51,20 @@ block content
                     h4 #{post.comments.length} 评论
 
                 each comment, i in post.comments
-                    div.row.comment
-                        div.col-md-1
-                            div.discussion-bubble
-                                img(src='#{comment.creator.thumbnails}',class='img-rounded face-thumbnails')
-                        div.col-md-11
+
+                    div.media
+                        a(class='pull-left',href='/users/#{comment.creator._id}')
+                            img(class='img-rounded face-thumbnails media-object',src='#{comment.creator.thumbnails}',alt="...")
+
+                        div.media-body
+                            p !{comment.content}
                             div.row
                                 div.col-md-2.marketing-byline
                                     a(href='/users/#{comment.creator._id}',class='comment-header-author') #{comment.creator.name}
                                     span(class='pull-right comment-header-date') #{comment.fromNow}
-                            div.row
-                                div.col-md-12
-                                    !{comment.content}
                     hr
+
+
         script(data-main='/build/app/post-show',src='/javascripts/require.js?v=#{appVersion}')
 
 
