--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -63,6 +63,9 @@ body {
   z-index: 100000;
 }
 /**home page cess**/
+.ie9-tip {
+  margin-top: 50px;
+}
 .content-div {
   min-height: 200px;
   padding-top: 30px;
