some small change

--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -54,7 +54,7 @@ block content
 
                     div.media
                         a(class='pull-left',href='/users/#{comment.creator._id}')
-                            img(class='img-rounded face-thumbnails media-object',src='#{comment.creator.thumbnails}',alt="...")
+                            img(class='img-polaroid img-rounded media-object',src='#{comment.creator.thumbnails}',alt="...")
 
                         div.media-body
                             p !{comment.content}
