--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -12,7 +12,7 @@ div.navbar.navbar-default.navbar-inverse.navbar-fixed-top
             div.navbar-collapse.collapse
                 ul.nav.navbar-nav
 
-                    if(typeof(currentLink) !== 'undefined' && currentLink === 'HOME')
+                    if( currentLink && currentLink === 'HOME')
                         li.active
 
                             a(href='/')
@@ -24,7 +24,7 @@ div.navbar.navbar-default.navbar-inverse.navbar-fixed-top
 
                                 span.glyphicon.glyphicon-home
                                 strong &nbsp;主页
-                    if(typeof(currentLink) !== 'undefined' && currentLink === 'REVIEW')
+                    if( currentLink && currentLink === 'REVIEW')
                         li.active
                             a(href='/review')
                                 span.glyphicon.glyphicon-filter
@@ -37,7 +37,7 @@ div.navbar.navbar-default.navbar-inverse.navbar-fixed-top
                     li(id='li-spinner')
 
                 ul.nav.navbar-nav.navbar-right
-                    if typeof(user) === 'undefined' || user === null || user === ''
+                    if !user
                         li
                             a(href='/login')
                                 span.glyphicon.glyphicon-log-in
