--- a/app/views/layouts/_message.jade
+++ b/app/views/layouts/_message.jade
@@ -1,8 +1,8 @@
 div.row
     div.col-md-12
-        if typeof(success) !== 'undefined' && success !== null && success!==''
+        if success
             div(class='alert alert-success')
                 #{success}
-        if typeof(error) !== 'undefined' && error !== null && error!==''
+        if error
             div(class='alert alert-warning')
                 #{error}
