--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -274,6 +274,11 @@ body {
     min-height: 200px;
   }
 }
+.content-editor-div{
+  padding: 5px;
+  min-height: 200px;
+  border: 1px solid #dddddd;
+}
 .tag-select{
   width:20%;
 }
