add mutiple tags and location

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -87,7 +87,7 @@ body {
 .spin-container{
   top:0;
   left:50%;
-  position:absolute;
+  position:fixed;
   z-index: 100000;
 }
 
@@ -147,7 +147,11 @@ body {
 
 
 /**one post**/
-
+.comment-div{
+  padding: 5px;
+  min-height: 120px;
+  border: 1px solid #dddddd;
+}
 
 /**login page cess**/
 @grey:#E0E0E0;
