change login page and email

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -134,6 +134,11 @@ body {
   }
   .rounded-corners
 }
+
+.new-member{
+  margin-top:30px;
+}
+
 .face-thumbnails{
   width: 40px;
   height: 40px;
@@ -156,7 +161,7 @@ body {
 /**login page cess**/
 @grey:#E0E0E0;
 @margin-top:140px;
-@dialog-width:343px;
+@dialog-width:60%;
 @width-full:100%;
 @tip-height:60px;
 
@@ -180,7 +185,6 @@ body {
 }
 .login-common{
   .rounded-corners;
-  width:@dialog-width ;
   .auto-center-layout;
   .text-center;
 }
@@ -218,6 +222,7 @@ body {
   }
 }
 
+/**
 @media (max-width: 760px) {
 
   @dialog-width:212px;
@@ -258,7 +263,7 @@ body {
     padding: 10px 10px 1px 10px;
     display: block;
   }
-}
+}**/
 
 
 
