--- a/app/views/layouts/_ie9.jade
+++ b/app/views/layouts/_ie9.jade
@@ -10,5 +10,13 @@
                     p
                         | 本站将不再提供对IE 6，7，8 及6以下版本的支持，
                         | 同时也不能保证本站点内容可以很好的运行在 IE6，7，8，及6以下版本上。
-                        | 我们强烈的推荐您使用最新的IE浏览器或者google chrome 浏览器，或者firefox 浏览器浏览本站内容。
-                        | 如果您正在使用IE9 或 IE最新版本，确保关闭IE兼容性视图
+                        | 当然也不能保证在企鹅浏览器，360安全浏览器，搜狗浏览器等一些浏览器上很好的运行。
+                        | 我们强烈的推荐您使用最新的，IE浏览器，或google chrome浏览器，或firefox，或safari浏览器浏览本站内容。
+                        | （关于如何下载使用上面提到的这些浏览器，可使用如下搜索工具操作，&nbsp
+
+                        a(href='http://www.sogou.com',class='alert-link') 搜狗
+                        | &nbsp;
+                        a(href='http://www.baidu.com',class='alert-link') 百度
+                        | &nbsp;
+                        | ) 如果您正在使用IE9 或 IE最新版本，确保关闭IE兼容性视图。
+                    p 由此给您带来的不变，我们深表歉意。
