--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -31,6 +31,9 @@ block content
                     label(class='control-label col-md-2', for='username') 用户名
                     div.col-md-2
                         label(class='control-label') #{user.name}
+
+                    div.col-md-2.alert.alert-warning 用户名不可修改
+
                 div.form-group
                     label(class='control-label col-md-2', for='regTime') 注册时间
                     div.col-md-2
